[gd_scene load_steps=2 format=3 uid="uid://06em18lkth6j"]

[ext_resource type="Script" path="res://scripts/utils/resource_spawner.gd" id="1_e1d5t"]

[node name="ResourceBoxSpawner" type="Node2D"]
script = ExtResource("1_e1d5t")

[node name="ResourceBoxSpawnTimer" type="Timer" parent="."]

[node name="TopLeft" type="Marker2D" parent="."]

[node name="TopRight" type="Marker2D" parent="."]

[node name="BottomLeft" type="Marker2D" parent="."]

[node name="BottomRight" type="Marker2D" parent="."]

[connection signal="timeout" from="ResourceBoxSpawnTimer" to="." method="_on_resource_box_spawn_timer_timeout"]
